finish up documentation

--- a/notebooks/art_of_prompt_design/tree_of_thought.ipynb
+++ b/notebooks/art_of_prompt_design/tree_of_thought.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,18 +181,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To avoid drifting away from the expected output we can use guidance to control the number of steps and guide the model to produce the answer exactly at step 4 as per the prompt."
+    "To avoid drifting away from the expected output we can use guidance to control the number of steps generated and *guide* the model to produce the answer exactly at step 4 as per the prompt."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style='margin: 0px; padding: 0px; vertical-align: middle; padding-left: 8px; margin-left: -8px; border-radius: 0px; border-left: 1px solid rgba(127, 127, 127, 0.2); white-space: pre-wrap; font-family: ColfaxAI, Arial; font-size: 15px; line-height: 23px;'>Use numbers and basic arithmetic operations (+ - * /) to obtain 24. Each step, you are only allowed to choose two of the remaining numbers to obtain a new number.\n",
+       "<pre style='margin: 0px; padding: 0px; vertical-align: middle; padding-left: 8px; margin-left: -8px; border-radius: 0px; border-left: 1px solid rgba(127, 127, 127, 0.2); white-space: pre-wrap; font-family: ColfaxAI, Arial; font-size: 15px; line-height: 23px;'>Use numbers and basic arithmetic operations (+ - * /) to obtain 24. At each step, you are only allowed to choose two of the remaining numbers to obtain a new number.\n",
        "Input: 4 4 6 8\n",
        "Steps:\n",
        "4 + 8 = 12 (left: 4 6 12)\n",
@@ -260,18 +260,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thats... better. Each intermediate step is a valid equation and the numbers left are also correct but the final answer is neither correct nor does it result in 24."
+    "Thats... better. Each intermediate step is a valid equation and the numbers left are also correct but the final answer is neither correct nor does it equal 24."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tree of Thought\n",
+    "# Tree of Thought Prompting (with Guidance)\n",
     "\n",
-    "ToT requires that first we *define a way to decompose the problem* into a sequence of individual \"thoughts\" or steps. A natural decomposition in this case can be a pairwise operation as a single \"thought\", exactly as we saw in the previous example with CoT.\n",
+    "ToT requires that first we *define a way to decompose the problem* into a sequence of individual \"thoughts\" or steps. A natural decomposition in this case can be a pairwise operation as a single \"thought\" (i.e. `6 - 4 = 2 (left: 3 3 2)`), exactly as we saw in the previous example with CoT. \n",
     "\n",
-    "Then, for generating the list of candidate next \"thoughts\" we can use a \"propose\" prompt. In the original paper the prompt asked the model to generate the equation and the numbers left immediately after (as we did in the CoT prompt). However, since we are using a 7B model instead of GPT-4, we can bridge the equations to the numbers left with an intermediate step which surrounds the operands in parenthesis. This makes it easier to then correctly generate the numbers left. \n",
+    "We'll use this pattern in the prompts to generate and evaluate candidate steps."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prompts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For generating the list of candidate next \"thoughts\" we can use a \"propose\" prompt. In the original paper the prompt asked the model to generate the equation and the numbers left immediately after (as we did in the CoT prompt). However, since we are using a 7B model instead of GPT-4, we can bridge the equations to the numbers left with an intermediate step which surrounds the operands in parenthesis. This makes it easier to then correctly generate the numbers left. \n",
     "\n",
     "Example:\n",
     "\n",
@@ -288,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,28 +334,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "\n",
-    "Finally, we can use the following prompt to evaluate the set of candidate steps and give a score to each one based on how likely it is to lead to the correct answer:"
+    "We can use the following prompt to evaluate the numbers left after each proposed step and assign a score based on how likely 24 can be reached from them."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "value_prompt = '''Evaluate if given numbers can reach 24. The operations allowed are + - * /.\n",
     "10 14\n",
     "10 + 14 = 24\n",
@@ -393,8 +398,22 @@
     "26 is bigger than 24\n",
     "impossible\n",
     "{input}\n",
-    "'''\n",
-    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, once the final answer is generated we check if the equation uses each of the input numbers exactly once. Note how in the prompt we reference a function called `frequencies()` which can be passed as a tool to the `gen()` function so the model can use it to reliably count the number of times each number is used in the equation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "evaluate_operands = '''\n",
     "Do the numbers in the equation match the numbers in the input? (sure/impossible)\n",
     "numbers: 2 8 8 14\n",
@@ -410,8 +429,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since a lot of the prompts rely on mathematical operations, it can be useful to define a calculator tool to reliably evaluate the equations. For that we first need to define the context free grammars which describe the format of the equations (as described in the [readme](../../README.md#context-free-grammars)) then we can pass the tool to the model so it can evaluate arbitrary equations."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,14 +467,6 @@
     "        '(' + expression() + ')'\n",
     "    ])\n",
     "\n",
-    "@guidance(stateless=True)\n",
-    "def four_numbers(lm):\n",
-    "    return lm + number() + ' ' + number() + ' ' + number() + ' ' + number()\n",
-    "\n",
-    "@guidance(stateless=True)\n",
-    "def calculator_call(lm):\n",
-    "    return lm + capture(expression(), 'tool_args') + ' ='\n",
-    "\n",
     "@guidance\n",
     "def calculator(lm):\n",
     "    expression = lm['tool_args']\n",
@@ -449,9 +474,29 @@
     "    return lm\n",
     "\n",
     "@guidance(stateless=True)\n",
-    "def frequencies_call(lm):\n",
-    "    '''Tool can be called with a string of 4 numbers or a string with a mathematical expression.'''\n",
-    "    return lm + \"frequencies('\" + capture(select([expression(),  four_numbers()]), 'tool_args') + \"')\"\n",
+    "def calculator_call(lm):\n",
+    "    return lm + capture(expression(), 'tool_args') + ' ='\n",
+    "\n",
+    "\n",
+    "calculator_tool = Tool(calculator_call(), calculator)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets do the same for the frequency tool mentioned above. Note that, in addition to the final equation, this tool also takes the original input numbers (e.g `3 3 4 6`) as input. So we also define a grammar for that."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@guidance(stateless=True)\n",
+    "def four_numbers(lm):\n",
+    "    return lm + number() + ' ' + number() + ' ' + number() + ' ' + number()\n",
     "\n",
     "@guidance\n",
     "def frequencies(lm):\n",
@@ -463,13 +508,26 @@
     "    lm += f' = {freqs}'\n",
     "    return lm\n",
     "\n",
-    "calculator_tool = Tool(calculator_call(), calculator)\n",
-    "frequency_tool = Tool(frequencies_call(), frequencies)\n"
+    "@guidance(stateless=True)\n",
+    "def frequencies_call(lm):\n",
+    "    '''Tool can be called with a string of 4 numbers or a string with a mathematical expression.'''\n",
+    "    return lm + \"frequencies('\" + capture(select([expression(),  four_numbers()]), 'tool_args') + \"')\"\n",
+    "\n",
+    "frequency_tool = Tool(frequencies_call(), frequencies)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Flow\n",
+    "\n",
+    "Now that we have all the necessary prompts and tools we can define the actual flow of the ToT strategy. We basically just need to define functions for the *generate* and *evaluate* steps. Since the *selection* step is relatively simple we can just do it inline."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,8 +603,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally we can just *ToT*!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -564,11 +629,11 @@
       "\n",
       "Values\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
-      "  --->: 20\n",
+      "  --->: 10\n",
       "1 + 11 = 12 (left: 12 1 11)\n",
-      "  --->: 20\n",
+      "  --->: 10\n",
       "11 + 1 = 12 (left: 12 1 11)\n",
-      "  --->: 20\n",
+      "  --->: 10\n",
       "Selected\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "\n",
@@ -598,22 +663,22 @@
       "Values\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "2 + 11 = 13 (left: 13 11)\n",
-      "  --->: 20\n",
+      "  --->: 10\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "11 + 2 = 13 (left: 13 11)\n",
-      "  --->: 20\n",
+      "  --->: 10\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "11 - 2 = 9 (left: 9 11)\n",
-      "  --->: 0.001\n",
+      "  --->: 0.01\n",
       "1 + 11 = 12 (left: 12 1 11)\n",
       "12 + 1 = 13 (left: 13 11)\n",
-      "  --->: 20\n",
+      "  --->: 10\n",
       "1 + 11 = 12 (left: 12 1 11)\n",
       "12 - 1 = 11 (left: 11 11)\n",
-      "  --->: 0.001\n",
+      "  --->: 0.01\n",
       "1 + 11 = 12 (left: 12 1 11)\n",
       "12 * 1 = 12 (left: 12 11)\n",
-      "  --->: 20\n",
+      "  --->: 10\n",
       "Selected\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "2 + 11 = 13 (left: 13 11)\n",
@@ -652,27 +717,27 @@
       "1 + 1 = 2 (left: 2 11 11)\n",
       "2 + 11 = 13 (left: 13 11)\n",
       "13 + 11 = 24 (left: 24)\n",
-      "  --->: 20\n",
+      "  --->: 10\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "2 + 11 = 13 (left: 13 11)\n",
       "13 - 11 = 2 (left: 2)\n",
-      "  --->: 0.001\n",
+      "  --->: 0.01\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "2 + 11 = 13 (left: 13 11)\n",
       "13 / 11 = 1 (left: 1)\n",
-      "  --->: 0.001\n",
+      "  --->: 0.01\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "11 + 2 = 13 (left: 13 11)\n",
       "13 + 11 = 24 (left: 24)\n",
-      "  --->: 20\n",
+      "  --->: 10\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "11 + 2 = 13 (left: 13 11)\n",
       "13 - 11 = 2 (left: 2)\n",
-      "  --->: 0.001\n",
+      "  --->: 0.01\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "11 + 2 = 13 (left: 13 11)\n",
       "13 / 11 = 1 (left: 1)\n",
-      "  --->: 0.001\n",
+      "  --->: 0.01\n",
       "Selected\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "2 + 11 = 13 (left: 13 11)\n",
@@ -703,13 +768,13 @@
       "13 + 11 = 24 (left: 24)\n",
       "Answer: (1 + 1) + (11 + 11) = 24\n",
       "\n",
-      "  --->: 20\n",
+      "  --->: 10\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "11 + 2 = 13 (left: 13 11)\n",
       "13 + 11 = 24 (left: 24)\n",
       "Answer: (1 + 1) + (11 + 11) = 24\n",
       "\n",
-      "  --->: 20\n",
+      "  --->: 10\n",
       "Selected\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "2 + 11 = 13 (left: 13 11)\n",
@@ -745,11 +810,15 @@
     "model.echo = False\n",
     "N_PROPOSALS = 3\n",
     "N_SELECTED = 2\n",
-    "value_map = {'impossible': 0.001, 'likely': 1, 'sure': 20}\n",
+    "N_STEPS = 4\n",
+    "\n",
+    "# assign a value to each evaluation so that we can sort the proposals by value\n",
+    "value_map = {'impossible': 0.01, 'likely': 1, 'sure': 10}\n",
     "x = '1 1 11 11'\n",
+    "# start with an empty list of proposals\n",
     "ys = ['']\n",
     "print(f\"INPUT: {x}\")\n",
-    "for step in range(4):\n",
+    "for step in range(N_STEPS):\n",
     "    print(f\"STEP {step}\")\n",
     "    # generate\n",
     "    new_ys = [generate_proposals(x, y, n=N_PROPOSALS) for y in ys]\n",
@@ -768,7 +837,7 @@
     "\n",
     "    print(\"Values\")\n",
     "    for y, value in zip(new_ys, values):\n",
-    "        print(y, f' --->: {value}')\n",
+    "        print(y, f' ---> {value}')\n",
     "\n",
     "    # select\n",
     "    select_ids = sorted(ids, key=lambda x: values[x], reverse=True)[:N_SELECTED]\n",
