--- a/notebooks/art_of_prompt_design/tree_of_thought.ipynb
+++ b/notebooks/art_of_prompt_design/tree_of_thought.ipynb
@@ -11,7 +11,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tree Of Thoughts "
+    "# Tree Of Thoughts Desing Pattern"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The *Tree Of Thoughts* prompting strategy (by [Yae et al](https://arxiv.org/abs/2305.10601)) is a generalization of the *Chain Of Thought* approach (by [Wei et al](https://arxiv.org/abs/2201.11903)) . In CoT the model is prompted to generate a series of intermediate reasoning steps before reaching the final answer. ToT uses a similar pattern but it also allows LMs to perform deliberate decision making by considering multiple different reasoning paths and self-evaluating choices to decide the next course of action. This strategy increases the chances of finding a valid thought chain in contrast to CoT which committs to a single path early on.\n",
+    "\n",
+    "ToT frames any problem as a search over a tree. It consists of 4 steps:\n",
+    "1. Define a way (based on the problem properties) to decompose the problem into a sequence of \"thoughts\" or steps.\n",
+    "2. Generate a list of candidate next \"thoughts\" or steps.\n",
+    "3. Evaluate the set of candidate steps and give a score to each one based on how likely it is to lead to the correct answer.\n",
+    "4. Search over the generated tree of thoughts and select the best path (e.g. Using BFS or DFS).\n",
+    "\n",
+    "![Image Description](docs/figures/tot.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup\n",
+    "\n",
+    "First lest import the necessary modules and load the language model.\n"
    ]
   },
   {
@@ -23,8 +47,7 @@
     "import guidance\n",
     "from guidance import models, gen, user, assistant, system\n",
     "path_to_model = \"/Users/samuelrodriguez/models/mistral/mistral-7b-v0.1.Q3_K_M.gguf\"\n",
-    "mistral7 = models.LlamaCpp(path_to_model, n_ctx=4096)\n",
-    "model = mistral7"
+    "model = models.LlamaCpp(path_to_model, n_ctx=4096)"
    ]
   },
   {
@@ -302,39 +325,74 @@
    "outputs": [],
    "source": [
     "def get_current_numbers(y: str) -> str:\n",
+    "    \"\"\"Get the numbers that are left to be used in the equation.\"\"\"\n",
     "    last_line = y.strip().split('\\n')[-1]\n",
     "    return last_line.split('left: ')[-1].split(')')[0]\n",
     "\n",
-    "@guidance\n",
-    "def evaluate_proposal(lm, input, y):\n",
-    "    last_line = y.strip().split('\\n')[-1]\n",
-    "    if 'left: ' not in last_line:\n",
-    "        equation, result = last_line.lower().replace('answer: ', '').split('=')\n",
-    "        if result.strip() != '24':\n",
-    "            evaluation = 'impossible'\n",
-    "        else:\n",
-    "            op_lm = lm + evaluate_operands.format(input=input, equation=equation) + gen('result', tools=[frequency_tool], stop_regex='sure|impossible', save_stop_text=True)\n",
-    "            evaluation = op_lm['result_stop_text']\n",
-    "    else:\n",
-    "        lm += value_prompt.format(input=get_current_numbers(y))\n",
-    "        lm += gen('evaluation', stop_regex='sure|likely|impossible', save_stop_text=True, tools=[calculator_tool])\n",
-    "        evaluation = lm['evaluation_stop_text']\n",
-    "    return lm.set('evaluation', evaluation)\n",
     "\n",
     "def generate_proposals(x, y, n=4):\n",
+    "    \"\"\"\n",
+    "    Take original input \"x\" and steps taken so far \"y\" and concatenate \"n\" different proposed next steps to the steps taken so far.\n",
+    "\n",
+    "    Args:\n",
+    "        x (str): The input string.\n",
+    "        y (str): The steps taken so far.\n",
+    "        n (int, optional): The number of proposals to generate. Defaults to 4.\n",
+    "\n",
+    "    Returns:\n",
+    "        if there is only one number left:\n",
+    "            list: A list with a single string containing steps taken so far and the final answer. e.g. [y + 'Answer: 1 * 1 * (2 * 12) = 24']\n",
+    "        otherwise:\n",
+    "            list: A list of \"steps taken + proposed next step\" for \"n\" proposals. e.g. [y + proposal_1, y + proposal_2, ...]\n",
+    "\n",
+    "    Examples:\n",
+    "        >>> generate_proposals('2 8 8 14', '2 + 8 = 10 (left: 10 8 14)', n=2)\n",
+    "        [\n",
+    "            '2 + 8 = 10 (left: 10 8 14)\\n10 + 8 = 18 (left: 18 14)', \n",
+    "            '2 + 8 = 10 (left: 10 8 14)\\n10 * 8 = 80 (left: 80 14)'\n",
+    "        ]\n",
+    "\n",
+    "        >>> generate_proposals('1 2 12', '2 * 12 = 24 (left: 1 24)\\n1 * 24 = 24 (left: 24)')\n",
+    "        >>> ['2 * 12 = 24 (left: 1 24)\\n1 * 24 = 24 (left: 24)\\nAnswer: 1 * (2 * 12) = 24']\n",
+    "    \"\"\"\n",
     "    current_numbers = get_current_numbers(y if y else x)\n",
     "    if len(current_numbers.split(' ')) == 1:\n",
+    "        # Use few-shot cot prompt to generate the answer\n",
     "        prompt = cot_prompt.format(input=x) + y + 'Answer: '\n",
+    "        # Use the calculator tool to guarantee the result of the equation is correct\n",
     "        lm = model + prompt + gen('answer', suffix='\\n', tools=[calculator_tool])\n",
     "        return [y + f'Answer: {lm[\"answer\"]}\\n']\n",
     "    else:\n",
     "        lm = model + propose_prompt.format(input=current_numbers)\n",
     "        i = 0\n",
     "        while i < n:\n",
-    "            lm += gen('operation', suffix=' -> ', list_append=True, regex='\\d+\\s[-+*/]\\s\\d+ = \\d+') + gen(suffix=' -> ') #, tools=[calculator_tool]) \n",
+    "            # generate the equation and store it in \"operation\" list. Note that the regex is used to guarantee that a valid equation is generated\n",
+    "            lm += gen('operation', suffix=' -> ', list_append=True, regex='\\d+\\s[-+*/]\\s\\d+ = \\d+') #, tools=[calculator_tool]) \n",
+    "            # bridge step replacing original numbers with the operation\n",
+    "            lm += gen(suffix=' -> ') \n",
+    "            # generate the new numbers left by replacing the operation with the result\n",
     "            lm += gen('numbers_left', suffix='\\n', list_append=True)\n",
     "            i += 1\n",
-    "        return [y + op + f' (left: {numbers_left})\\n' for op, numbers_left in zip(lm['operation'], lm['numbers_left'])]"
+    "        # concatenate the steps taken so far with the proposed next steps in a format that matches the cot_prompt\n",
+    "        return [y + op + f' (left: {numbers_left})\\n' for op, numbers_left in zip(lm['operation'], lm['numbers_left'])]\n",
+    "\n",
+    "@guidance\n",
+    "def evaluate_proposal(lm, input, y):\n",
+    "    \"\"\"Evaluate how likely it is that the numbers left can reach 24 or that the given answer is correct.\"\"\"\n",
+    "    last_line = y.strip().split('\\n')[-1]\n",
+    "    if 'left: ' in last_line:\n",
+    "        lm += value_prompt.format(input=get_current_numbers(y))\n",
+    "        lm += gen('evaluation', stop_regex='sure|likely|impossible', save_stop_text=True, tools=[calculator_tool])\n",
+    "        evaluation = lm['evaluation_stop_text']\n",
+    "    else:\n",
+    "        equation, result = last_line.lower().replace('answer: ', '').split('=')\n",
+    "        if result.strip() != '24':\n",
+    "            evaluation = 'impossible'\n",
+    "        else:\n",
+    "            lm += evaluate_operands.format(input=input, equation=equation)\n",
+    "            lm += gen('evaluation', stop_regex='sure|impossible', save_stop_text=True, tools=[frequency_tool])\n",
+    "            evaluation = lm['evaluation_stop_text']\n",
+    "    return lm.set('evaluation', evaluation)\n"
    ]
   },
   {
