remove old prompts & cells; uncomment code;

--- a/notebooks/art_of_prompt_design/tree_of_thought.ipynb
+++ b/notebooks/art_of_prompt_design/tree_of_thought.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,13 +24,12 @@
     "from guidance import models, gen, user, assistant, system\n",
     "path_to_model = \"/Users/samuelrodriguez/models/mistral/mistral-7b-v0.1.Q3_K_M.gguf\"\n",
     "mistral7 = models.LlamaCpp(path_to_model, n_ctx=4096)\n",
-    "# llama2 = models.LlamaCpp(os.getenv(\"LLAMA_13B_PATH\"), n_ctx=4096)\n",
     "model = mistral7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,12 +95,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lm = model + standard_prompt.format(input=\"3 3 4 6\")\n",
-    "# lm += gen(\"answer\", suffix=\"\\n\")"
+    "lm = model + standard_prompt.format(input=\"3 3 4 6\")\n",
+    "lm += gen(\"answer\", suffix=\"\\n\")"
    ]
   },
   {
@@ -113,23 +112,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @guidance\n",
-    "# def run_cot(lm, input, steps=3):\n",
-    "#     lm = model + cot_prompt.format(input=input)\n",
-    "#     i = 0\n",
-    "#     while i < steps:\n",
-    "#         lm += gen(\"step\", suffix=\"\\n\")\n",
-    "#         i += 1\n",
-    "#     lm += \"Answer:\" + gen(\"answer\", suffix=\"\\n\")\n",
-    "#     return lm\n",
+    "@guidance\n",
+    "def run_cot(lm, input, steps=3):\n",
+    "    lm = model + cot_prompt.format(input=input)\n",
+    "    i = 0\n",
+    "    while i < steps:\n",
+    "        lm += gen(\"step\", suffix=\"\\n\")\n",
+    "        i += 1\n",
+    "    lm += \"Answer:\" + gen(\"answer\", suffix=\"\\n\")\n",
+    "    return lm\n",
     "        \n",
-    "# numbers = '3 3 4 6'\n",
-    "# lm = model\n",
-    "# lm += run_cot(input=numbers)"
+    "numbers = '3 3 4 6'\n",
+    "lm = model\n",
+    "lm += run_cot(input=numbers)"
    ]
   },
   {
@@ -141,25 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1-shot\n",
-    "propose_prompt_original = '''Input: 2 8 8 14\n",
-    "Possible next steps:\n",
-    "2 + 8 = 10 (left: 8 10 14)\n",
-    "8 / 2 = 4 (left: 4 8 14)\n",
-    "14 + 2 = 16 (left: 8 8 16)\n",
-    "2 * 8 = 16 (left: 8 14 16)\n",
-    "8 - 2 = 6 (left: 6 8 14)\n",
-    "14 - 8 = 6 (left: 2 6 8)\n",
-    "14 /  2 = 7 (left: 7 8 8)\n",
-    "14 - 2 = 12 (left: 8 8 12)\n",
-    "Input: {input}\n",
-    "Possible next steps:\n",
-    "'''\n",
-    "\n",
     "propose_prompt = '''Input: 2 8 8 14\n",
     "Possible next steps:\n",
     "2 + 8 = 10 -> (8 + 2) 8 14 -> 10 8 14\n",
@@ -239,37 +223,6 @@
     "{input}\n",
     "'''\n",
     "\n",
-    "\n",
-    "value_last_step_prompt = '''Use numbers and basic arithmetic operations (+ - * /) to obtain 24. Given an input and an answer, give a judgement (sure/impossible) if the answer is correct, i.e. it uses each input exactly once and no other numbers, and reach 24.\n",
-    "Input: 4 4 6 8\n",
-    "Answer: (4 + 8) * (6 - 4) = 24\n",
-    "Judge: \n",
-    "sure\n",
-    "Input: 2 9 10 12\n",
-    "Answer: 2 * 12 * (10 - 9) = 24\n",
-    "Judge: \n",
-    "sure\n",
-    "Input: 4 9 10 13\n",
-    "Answer: (13 - 9) * (10 - 4) = 24\n",
-    "Judge: \n",
-    "sure\n",
-    "Input: 4 4 6 8\n",
-    "Answer: (4 + 8) * (6 - 4) + 1 = 25\n",
-    "Judge: \n",
-    "impossible\n",
-    "Input: 2 9 10 12\n",
-    "Answer: 2 * (12 - 10) = 24\n",
-    "Judge: \n",
-    "impossible\n",
-    "Input: 4 9 10 13\n",
-    "Answer: (13 - 4) * (10 - 9) = 24\n",
-    "Judge: \n",
-    "impossible\n",
-    "Input: {input}\n",
-    "Answer: {answer}\n",
-    "Judge:\n",
-    "'''\n",
-    "\n",
     "evaluate_operands = '''\n",
     "Do the numbers in the equation match the numbers in the input? (sure/impossible)\n",
     "numbers: 2 8 8 14\n",
@@ -286,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -491,93 +444,6 @@
     "for p in ys:\n",
     "    print(p)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Sandbox"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style='margin: 0px; padding: 0px; vertical-align: middle; padding-left: 8px; margin-left: -8px; border-radius: 0px; border-left: 1px solid rgba(127, 127, 127, 0.2); white-space: pre-wrap; font-family: ColfaxAI, Arial; font-size: 15px; line-height: 23px;'>\n",
-       "Do the numbers in the equation match the numbers in the input? (sure/impossible)\n",
-       "numbers: 2 8 8 14\n",
-       "equation: (2 + 8) * (8 + 14)\n",
-       "numbers frequencies: frequencies(&#x27;2 8 8 14&#x27;) = {2: 1, 8: 2, 14: 1}\n",
-       "equation frequencies: frequencies(&#x27;(2 + 8) * (8 + 14)&#x27;) = {2: 1, 8: 2, 14: 1}\n",
-       "frequencies are the same\n",
-       "answer: sure\n",
-       "\n",
-       "numbers: 1 1 11 11\n",
-       "equation: (1 + 1) * (11 + 11) + 1\n",
-       "<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>num</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>ber</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>s frequencie</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>s:</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> frequencie</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>s(&#x27;</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>1</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> </span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>1</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> </span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>1</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>1</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> </span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>1</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>1</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&#x27;)</span> = {1: 2, 11: 2}<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>\n",
-       "</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>equation</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> frequencie</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>s:</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> frequencie</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>s(&#x27;</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>(</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>1</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> +</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> </span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>1</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>)</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> *</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> (</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>1</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>1</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> +</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> </span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>1</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>1</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>)</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> +</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> </span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>1</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>&#x27;)</span> = {1: 3, 11: 2}<span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>\n",
-       "</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>f</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>requ</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>encie</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>s are</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> not</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> the</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> same</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>\n",
-       "</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>answer</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'>:</span><span style='background-color: rgba(0.0, 165.0, 0, 0.15); border-radius: 3px;' title='1.0'> </span></pre>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "\n",
-    "evaluate_operands = '''\n",
-    "Do the numbers in the equation match the numbers in the input? (sure/impossible)\n",
-    "numbers: 2 8 8 14\n",
-    "equation: (2 + 8) * (8 + 14)\n",
-    "numbers frequencies: frequencies('2 8 8 14') = {{2: 1, 8: 2, 14: 1}}\n",
-    "equation frequencies: frequencies('(2 + 8) * (8 + 14)') = {{2: 1, 8: 2, 14: 1}}\n",
-    "frequencies are the same\n",
-    "answer: sure\n",
-    "\n",
-    "numbers: {input}\n",
-    "equation: {equation}\n",
-    "'''\n",
-    "\n",
-    "x = '1 1 11 11'\n",
-    "equation = '(1 + 1) * (11 + 11) + 1'\n",
-    "\n",
-    "lm = model + evaluate_operands.format(input=x, equation=equation) + gen('result', tools=[frequency_tool], stop_regex='sure|impossible', save_stop_text=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'impossible'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lm['result_stop_text']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
