--- a/notebooks/art_of_prompt_design/tree_of_thought.ipynb
+++ b/notebooks/art_of_prompt_design/tree_of_thought.ipynb
@@ -18,12 +18,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The *Tree Of Thoughts* prompting strategy (by [Yae et al](https://arxiv.org/abs/2305.10601)) is a generalization of the *Chain Of Thought* approach (by [Wei et al](https://arxiv.org/abs/2201.11903)) . In CoT the model is prompted to generate a series of intermediate reasoning steps before reaching the final answer. ToT uses a similar pattern but it also allows LMs to perform deliberate decision making by considering multiple different reasoning paths and self-evaluating choices to decide the next course of action. This strategy increases the chances of finding a valid thought chain in contrast to CoT which committs to a single path early on.\n",
+    "The *Tree Of Thoughts* prompting strategy (by [Yae et al](https://arxiv.org/abs/2305.10601)) is a generalization of the *Chain Of Thought* approach (by [Wei et al](https://arxiv.org/abs/2201.11903)) . In CoT the model is prompted to generate a series of intermediate reasoning steps before reaching the final output. ToT uses a similar pattern but it also allows LMs to perform deliberate decision making by considering multiple different reasoning paths and self-evaluating choices to decide the next course of action. This strategy increases the chances of finding a valid thought chain in contrast to CoT which committs to a single path early on.\n",
     "\n",
     "ToT frames any problem as a search over a tree. It consists of 4 steps:\n",
     "1. Define a way (based on the problem properties) to decompose the problem into a sequence of \"thoughts\" or steps.\n",
-    "2. Generate a list of candidate next \"thoughts\" or steps.\n",
-    "3. Evaluate the set of candidate steps and give a score to each one based on how likely it is to lead to the correct answer.\n",
+    "2. Generate a set of candidate next \"thoughts\" or steps.\n",
+    "3. Evaluate the set of candidate steps and give a score to each one based on how likely it is to lead to the correct output.\n",
     "4. Search over the generated tree of thoughts and select the best path (e.g. Using BFS or DFS).\n",
     "\n",
     "![Image Description](../../docs/figures/tot.png)\n"
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thats... better. Each intermediate step is a valid equation and the numbers left are also correct but the final answer is neither correct nor does it equal 24."
+    "Thats... better. Each intermediate step is a valid equation and the \"numbers left\" are also correct. \n",
+    "\n",
+    "However, the final equation: \n",
+    "1. Doesn't follow the rules (it contains an additional hallucinated '3'). \n",
+    "2. It is not valid. \n",
+    "3. It doesn't result in '24'."
    ]
   },
   {
@@ -271,7 +276,7 @@
     "\n",
     "ToT requires that first we *define a way to decompose the problem* into a sequence of individual \"thoughts\" or steps. A natural decomposition in this case can be a pairwise operation as a single \"thought\" (i.e. `6 - 4 = 2 (left: 3 3 2)`), exactly as we saw in the previous example with CoT. \n",
     "\n",
-    "We'll use this pattern in the prompts to generate and evaluate candidate steps."
+    "We'll use this pattern in the following prompts to generate and evaluate candidate steps."
    ]
   },
   {
@@ -285,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For generating the list of candidate next \"thoughts\" we can use a \"propose\" prompt. In the original paper the prompt asked the model to generate the equation and the numbers left immediately after (as we did in the CoT prompt). However, since we are using a 7B model instead of GPT-4, we can bridge the equations to the numbers left with an intermediate step which surrounds the operands in parenthesis. This makes it easier to then correctly generate the numbers left. \n",
+    "For generating the list of candidate next \"thoughts\" we can use a \"propose\" prompt. In the original paper the prompt asked the model to generate the equation and the numbers left immediately after (as we did in the CoT prompt). However, since we are using a 7B model instead of GPT-4, we might find it useful to bridge the equations to the numbers left with an intermediate step which surrounds the operands in parenthesis. This makes it easier to then correctly generate the numbers left. \n",
     "\n",
     "Example:\n",
     "\n",
@@ -297,12 +302,14 @@
     "\n",
     "we can ask it to generate:\n",
     "\n",
-    "`2 + 2 = 4` -> `(2 + 2) 1` -> `4 1`\n"
+    "`2 + 2 = 4 -> (2 + 2) 1 -> 4 1`\n",
+    "\n",
+    "(As we'll see later, guidance allows us to easily store the relevant parts of the output i.e. `2 + 2 = 4` and `4 1` in variables and reformat them as needed to match the desired input for the next step)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,12 +345,12 @@
    "metadata": {},
    "source": [
     "\n",
-    "We can use the following prompt to evaluate the numbers left after each proposed step and assign a score based on how likely 24 can be reached from them."
+    "We can use the following prompt to evaluate the numbers left after each proposed step and assign an evaluation (e.g. 'sure', 'likely' or 'impossible') based on how likely 24 can be reached from them."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,12 +412,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, once the final answer is generated we check if the equation uses each of the input numbers exactly once. Note how in the prompt we reference a function called `frequencies()` which can be passed as a tool to the `gen()` function so the model can use it to reliably count the number of times each number is used in the equation."
+    "Once the final equation is generated we can check if it uses each of the input numbers exactly once. For the sake of consistency we can use the same labels as the value prompt above (i.e. 'sure' and 'impossible')."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,6 +439,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note how in the prompt we reference a function called `frequencies()` which can be passed as a tool to the `gen()` function so the model can use it to reliably count the number of times each number is used in the equation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Tools"
    ]
   },
@@ -439,12 +453,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since a lot of the prompts rely on mathematical operations, it can be useful to define a calculator tool to reliably evaluate the equations. For that we first need to define the context free grammars which describe the format of the equations (as described in the [readme](../../README.md#context-free-grammars)) then we can pass the tool to the model so it can evaluate arbitrary equations."
+    "Since a lot of the prompts rely on mathematical operations, it can be useful to define a calculator tool to reliably evaluate these. For that we first need to define the context free grammars which describe the format of the equations (as described in this project's [readme](../../README.md#context-free-grammars)) then we can pass the tool to the model so it can evaluate arbitrary equations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,12 +499,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets do the same for the frequency tool mentioned above. Note that, in addition to the final equation, this tool also takes the original input numbers (e.g `3 3 4 6`) as input. So we also define a grammar for that."
+    "Lets do the same for the frequency tool mentioned before. Note that, in addition to the final equation, this tool also takes the original input numbers (e.g `3 3 4 6`) as input. So we also define a grammar for that."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -629,11 +643,11 @@
       "\n",
       "Values\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
-      "  --->: 10\n",
+      "  ---> 10\n",
       "1 + 11 = 12 (left: 12 1 11)\n",
-      "  --->: 10\n",
+      "  ---> 10\n",
       "11 + 1 = 12 (left: 12 1 11)\n",
-      "  --->: 10\n",
+      "  ---> 10\n",
       "Selected\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "\n",
@@ -663,22 +677,22 @@
       "Values\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "2 + 11 = 13 (left: 13 11)\n",
-      "  --->: 10\n",
+      "  ---> 10\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "11 + 2 = 13 (left: 13 11)\n",
-      "  --->: 10\n",
+      "  ---> 10\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "11 - 2 = 9 (left: 9 11)\n",
-      "  --->: 0.01\n",
+      "  ---> 0.01\n",
       "1 + 11 = 12 (left: 12 1 11)\n",
       "12 + 1 = 13 (left: 13 11)\n",
-      "  --->: 10\n",
+      "  ---> 10\n",
       "1 + 11 = 12 (left: 12 1 11)\n",
       "12 - 1 = 11 (left: 11 11)\n",
-      "  --->: 0.01\n",
+      "  ---> 0.01\n",
       "1 + 11 = 12 (left: 12 1 11)\n",
       "12 * 1 = 12 (left: 12 11)\n",
-      "  --->: 10\n",
+      "  ---> 10\n",
       "Selected\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "2 + 11 = 13 (left: 13 11)\n",
@@ -717,27 +731,27 @@
       "1 + 1 = 2 (left: 2 11 11)\n",
       "2 + 11 = 13 (left: 13 11)\n",
       "13 + 11 = 24 (left: 24)\n",
-      "  --->: 10\n",
+      "  ---> 10\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "2 + 11 = 13 (left: 13 11)\n",
       "13 - 11 = 2 (left: 2)\n",
-      "  --->: 0.01\n",
+      "  ---> 0.01\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "2 + 11 = 13 (left: 13 11)\n",
       "13 / 11 = 1 (left: 1)\n",
-      "  --->: 0.01\n",
+      "  ---> 0.01\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "11 + 2 = 13 (left: 13 11)\n",
       "13 + 11 = 24 (left: 24)\n",
-      "  --->: 10\n",
+      "  ---> 10\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "11 + 2 = 13 (left: 13 11)\n",
       "13 - 11 = 2 (left: 2)\n",
-      "  --->: 0.01\n",
+      "  ---> 0.01\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "11 + 2 = 13 (left: 13 11)\n",
       "13 / 11 = 1 (left: 1)\n",
-      "  --->: 0.01\n",
+      "  ---> 0.01\n",
       "Selected\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "2 + 11 = 13 (left: 13 11)\n",
@@ -768,13 +782,13 @@
       "13 + 11 = 24 (left: 24)\n",
       "Answer: (1 + 1) + (11 + 11) = 24\n",
       "\n",
-      "  --->: 10\n",
+      "  ---> 10\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "11 + 2 = 13 (left: 13 11)\n",
       "13 + 11 = 24 (left: 24)\n",
       "Answer: (1 + 1) + (11 + 11) = 24\n",
       "\n",
-      "  --->: 10\n",
+      "  ---> 10\n",
       "Selected\n",
       "1 + 1 = 2 (left: 2 11 11)\n",
       "2 + 11 = 13 (left: 13 11)\n",
